[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://bullets/PlayerBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/down.tres" type="Animation" id=3]
[ext_resource path="res://Player/downrecovery.tres" type="Animation" id=4]
[ext_resource path="res://Player/idle.tres" type="Animation" id=5]
[ext_resource path="res://Player/up.tres" type="Animation" id=6]
[ext_resource path="res://Player/uprecovery.tres" type="Animation" id=7]
[ext_resource path="res://assets/PlayStation - Gradius Gaiden - Vic Viper.png" type="Texture" id=8]
[ext_resource path="res://icon.png" type="Texture" id=9]
[ext_resource path="res://Hit_Hurt56.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]

resource_name = "bounce"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 22.152, 8.20346 )

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 2
collision_mask = 13
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
Bullet = ExtResource( 2 )
max_health = 100

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 0
playback_default_blend_time = 0.0
playback_speed = 2.0
anims/bounce = SubResource( 1 )
anims/down = ExtResource( 3 )
anims/downrecovery = ExtResource( 4 )
anims/idle = ExtResource( 5 )
anims/up = ExtResource( 6 )
anims/uprecovery = ExtResource( 7 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

rotation = 0.785398
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 216, 10, 23, 16 )
_sections_unfolded = [ "Animation", "Region", "Transform", "Visibility" ]

[node name="Muzzle" type="Position2D" parent="Sprite" index="0"]

position = Vector2( 10, 0 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Sprite" type="Sprite" parent="Sprite/Muzzle" index="0"]

visible = false
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="BoostTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="GunTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="4"]

position = Vector2( -0.785055, 0.57571 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Hurt" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 10 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]


